# NESticle

./: .geminiignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  HOWTO.md  README.md  ROADMAP.md  STATE.md
Source/: COMMAND.CPP  CPU.CPP  GUI.H  GUIMENU.H  GUIRECT.H  GUIVOL.H  INPUT.CPP  INPUT.H  INPUTW.CPP  MAIN.CPP  MESSAGE.H  MMC.H  MOUSE.CPP  NES.CPP  NESDLG.CPP  NESSOUND.CPP  NESSOUND.H  NESVIDEO.CPP  ROM.CPP  ROM.H  STDDLG.CPP  VOL.CPP  VOL.H  asm_replacements.cpp  cursor_frames.h  gui_impl.cpp  platform_sdl2.cpp
Source/m6502/: fake6502.c  m6502.h  m6502_shim.cpp
tools/: gui_vol_gen.cpp
